--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "description": "Your Figma Plugin",
     "main": "code.js",
     "scripts": {
-        "build": "vue-tsc --noEmit && vite build && tsc -p tsconfig.figma.json",
-        "buildvue": "vue-tsc --noEmit && vite build",
-        "watch": "npm run build -- --watch",
-        "buildvite": "vite build --config vite-ui.config.ts && vite build --config vite-code.config.ts"
+        "build": "vite build --config vite-ui.config.ts && vite build --config vite-code.config.ts"
     },
     "author": "Michail Tyurchev",
     "license": "",
